--- a/LightMixer/app.config
+++ b/LightMixer/app.config
@@ -329,9 +329,9 @@
       </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="net.tcp://localhost:8523/DMX/DmxService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IDmxService" contract="LightService.IDmxService" name="NetTcpBinding_IDmxService">
+      <endpoint address="net.tcp://desktop-pjdgjgm:8523/DMX/DmxService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IDmxService" contract="LightService.IDmxService" name="NetTcpBinding_IDmxService">
         <identity>
-          <dns value="localhost"/>
+          <dns value="desktop-pjdgjgm"/>
         </identity>
       </endpoint>
     </client>
