--- a/ftditest1/OpenDmx.csproj
+++ b/ftditest1/OpenDmx.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Reference Include="Phidget21.NET, Version=2.1.8.130, Culture=neutral, PublicKeyToken=c2b1f2a3594bce52, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Phidgets\Phidget21.NET.dll</HintPath>
+      <HintPath>..\LightMixer\Phidget21.NET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
