--- a/BeatDetector/BeatDetector.csproj
+++ b/BeatDetector/BeatDetector.csproj
@@ -74,6 +74,7 @@
     <Reference Include="Bass.Net">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\BASS.NET\Bass.Net.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -81,6 +82,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BeatDetector.cs" />
