--- a/BeatDetector/BeatDetector.csproj
+++ b/BeatDetector/BeatDetector.csproj
@@ -77,6 +77,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -88,6 +89,13 @@
     <Compile Include="BeatDetector.cs" />
     <Compile Include="Detector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VdjEvent.cs" />
+    <Compile Include="VDJPipeServer.cs" />
+    <Compile Include="VdjPipeServerInstance.cs" />
+    <Compile Include="VDJPoi.cs" />
+    <Compile Include="VDJScan.cs" />
+    <Compile Include="VDJSong.cs" />
+    <Compile Include="VDJXmlParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="bass.dll">
