--- a/LightMixer/packages.config
+++ b/LightMixer/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Arkane.Zeroconf" version="1.2.20" targetFramework="net472" />
+  <package id="HADotNet.Core" version="1.5.1" targetFramework="net472" />
+  <package id="HADotNet.Entities" version="0.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.7" targetFramework="net472" />
@@ -68,7 +71,8 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.NET.Test.Sdk" version="16.6.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="RestSharp" version="106.11.7" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
