--- a/LightMixer/packages.config
+++ b/LightMixer/packages.config
@@ -3,6 +3,7 @@
   <package id="Arkane.Zeroconf" version="1.2.20" targetFramework="net472" />
   <package id="HADotNet.Core" version="1.5.1" targetFramework="net472" />
   <package id="HADotNet.Entities" version="0.1.2" targetFramework="net472" />
+  <package id="MathNet.Numerics" version="4.15.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.7" targetFramework="net472" />
