--- a/LightMixer/LightMixer.csproj
+++ b/LightMixer/LightMixer.csproj
@@ -154,4 +154,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converter\" />
+  </ItemGroup>
 </Project>
