--- a/BeatAnalyser.Net/BeatAnalyser.Net.csproj
+++ b/BeatAnalyser.Net/BeatAnalyser.Net.csproj
@@ -264,6 +264,7 @@
     <Compile Include="Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZPlanePOI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
