Angular Scene Service

--- a/LightMixerAngular/ClientApp/angular.json
+++ b/LightMixerAngular/ClientApp/angular.json
@@ -82,7 +82,7 @@
             },
             "development": {
               "browserTarget": "LightMixerAngular:build:development",
-              "proxyConfig": "proxy.conf.js"
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "options": {
