ignore angular cache

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ paket-files/
 __pycache__/
 *.pyc
 /MLAnalyser/env1/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.pyd
+.angular/
