--- a/SolairXVirtualDJPluggin/VirtualDJPlugin.vcxproj
+++ b/SolairXVirtualDJPluggin/VirtualDJPlugin.vcxproj
@@ -114,7 +114,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <OutputFile>C:\Users\ec_as\Documents\VirtualDJ\Plugins64\AutoStart\$(TargetName)$(TargetExt)</OutputFile>
+      <OutputFile>C:\Users\ec_as\AppData\Local\VirtualDJ\Plugins64\AutoStart\$(TargetName)$(TargetExt)</OutputFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
