--- a/MLAnalyser/env1/pyvenv.cfg
+++ b/MLAnalyser/env1/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Users\ec_as\.platformio\python37
+home = C:\Users\ec_as\AppData\Local\Programs\Python\Python37
 include-system-site-packages = false
 version = 3.7.5
