--- a/LightMixerStandard/LightMixerStandard.csproj
+++ b/LightMixerStandard/LightMixerStandard.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Arkane.Zeroconf" Version="1.3.24" />
     <PackageReference Include="HADotNet.Core" Version="1.6.0" />
     <PackageReference Include="HADotNet.Entities" Version="0.1.2" />
+    <PackageReference Include="ILDA.net" Version="1.0.0.1" />
+    <PackageReference Include="LibUsbDotNet" Version="2.2.29" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
